修改支付宝Demo中的异步通知

--- a/SpringBoot/springboot_alipay/src/main/resources/application.properties
+++ b/SpringBoot/springboot_alipay/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8888
+server.port=8080
 
 # \u5546\u6237UID
 alipay.uid=
@@ -9,9 +9,9 @@ alipay.merchant_private_key=
 # \u652F\u4ED8\u5B9D\u516C\u94A5,\u67E5\u770B\u5730\u5740\uFF1Ahttps://openhome.alipay.com/platform/keyManage.htm \u5BF9\u5E94APPID\u4E0B\u7684\u652F\u4ED8\u5B9D\u516C\u94A5\u3002
 alipay.alipay_public_key=
 # \u670D\u52A1\u5668\u5F02\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84  \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570\uFF0C\u5FC5\u987B\u5916\u7F51\u53EF\u4EE5\u6B63\u5E38\u8BBF\u95EE\uFF01\uFF01
-alipay.notify_url=http://localhost:8888/alipay/notify
+alipay.notify_url=http://ppsqzi.natappfree.cc/alipay/notify
 # \u9875\u9762\u8DF3\u8F6C\u540C\u6B65\u901A\u77E5\u9875\u9762\u8DEF\u5F84 \u9700http://\u683C\u5F0F\u7684\u5B8C\u6574\u8DEF\u5F84\uFF0C\u4E0D\u80FD\u52A0?id=123\u8FD9\u7C7B\u81EA\u5B9A\u4E49\u53C2\u6570
-alipay.return_url=http://localhost:8888/alipay/return
+alipay.return_url=http://ppsqzi.natappfree.cc/alipay/return
 # \u7B7E\u540D\u65B9\u5F0F
 alipay.sign_type=RSA2
 # \u652F\u4ED8\u5B9D\u7F51\u5173
