--- a/SpringBoot/springboot_alipay/pom.xml
+++ b/SpringBoot/springboot_alipay/pom.xml
@@ -40,6 +40,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!--支付宝支付SDK-->
         <dependency>
