--- a/SpringBoot/springboot_security/springboot_security/src/main/resources/application.properties
+++ b/SpringBoot/springboot_security/springboot_security/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/security02?useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
 
