--- a/SpringBoot/springboot_security/springboot_security/src/main/resources/application.properties
+++ b/SpringBoot/springboot_security/springboot_security/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/security02?useUnicode=true&cha
 spring.datasource.username=root
 spring.datasource.password=root
 
-#\u5F00\u542FMybatis\u4E0B\u5212\u7EBF\u547D\u540D\u8F6C\u9A7C\u5CF0\u547D\u540D
+# 开启Mybatis下划线命名转驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
