--- a/Java/grpc_demo/pom.xml
+++ b/Java/grpc_demo/pom.xml
@@ -37,6 +37,17 @@
             <version>${grpc.version}</version>
         </dependency>
         <!-- gRPC Dependency End -->
+
+        <dependency>
+            <groupId>com.googlecode.protobuf-java-format</groupId>
+            <artifactId>protobuf-java-format</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
     </dependencies>
 
     <build>
