--- a/Java/concurrent_code/pom.xml
+++ b/Java/concurrent_code/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jit.wxs</groupId>
-    <artifactId>concurrent</artifactId>
+    <groupId>com.github.jitwxs</groupId>
+    <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
