--- a/Java/performance_optimized/pom.xml
+++ b/Java/performance_optimized/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>performance_optimize</artifactId>
+    <groupId>com.github.jitwxs</groupId>
+    <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <description>performance_optimize</description>
 
     <dependencies>
         <dependency>
