oauth-sample standardized

--- a/springboot-sample/pom.xml
+++ b/springboot-sample/pom.xml
@@ -21,6 +21,7 @@
         <module>mp3-sample</module>
         <module>shiro-sample</module>
         <module>alipay-sample</module>
+        <module>oauth-sample</module>
     </modules>
 
     <properties>
