--- a/springboot-sample/aop-sample/pom.xml
+++ b/springboot-sample/aop-sample/pom.xml
@@ -10,7 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>aop-sample</artifactId>
-    <description>https://www.jitwxs.cn/77bba914.html</description>
+    <url>https://www.jitwxs.cn/77bba914.html</url>
+    <description>SpringBoot 整合 AOP</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
