--- a/springboot-sample/jib-sample/pom.xml
+++ b/springboot-sample/jib-sample/pom.xml
@@ -10,7 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jib-sample</artifactId>
-    <description>https://www.jitwxs.cn/a526485e.html</description>
+    <url>https://www.jitwxs.cn/a526485e.html</url>
+    <description>Google Jib 容器化构建工具</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
