--- a/springboot-sample/oauth-sample/pom.xml
+++ b/springboot-sample/oauth-sample/pom.xml
@@ -10,7 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth-sample</artifactId>
-    <description>https://www.jitwxs.cn/33ad9e35.html</description>
+    <url>https://www.jitwxs.cn/33ad9e35.html</url>
+    <description>Web 三方登录实现（基于OAuth2.0，包含Github和QQ登录）</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
