--- a/springboot-sample/dynamic-schedule-sample/pom.xml
+++ b/springboot-sample/dynamic-schedule-sample/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dynamic-schedule-sample</artifactId>
+    <url>https://www.jitwxs.cn/e4d53ddb.html</url>
+    <description>Spring SchedulingConfigurer 实现动态定时任务</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
