--- a/springboot-sample/aop-sample/pom.xml
+++ b/springboot-sample/aop-sample/pom.xml
@@ -5,18 +5,13 @@
     <parent>
         <artifactId>springboot-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>aop-sample</artifactId>
     <url>https://www.jitwxs.cn/77bba914.html</url>
     <description>SpringBoot 整合 AOP</description>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
