--- a/springboot-sample/jib-sample/pom.xml
+++ b/springboot-sample/jib-sample/pom.xml
@@ -5,18 +5,13 @@
     <parent>
         <artifactId>springboot-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jib-sample</artifactId>
     <url>https://www.jitwxs.cn/a526485e.html</url>
     <description>Google Jib 容器化构建工具</description>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
     <build>
         <plugins>
