--- a/springboot-sample/jwt-sample/jwt-sample-ch01/pom.xml
+++ b/springboot-sample/jwt-sample/jwt-sample-ch01/pom.xml
@@ -5,15 +5,10 @@
     <parent>
         <artifactId>jwt-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jwt-sample-ch01</artifactId>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
