--- a/springboot-sample/jwt-sample/jwt-sample-ch02/pom.xml
+++ b/springboot-sample/jwt-sample/jwt-sample-ch02/pom.xml
@@ -5,22 +5,17 @@
     <parent>
         <artifactId>jwt-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jwt-sample-ch02</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.github.jitwxs.sample</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${reversion}</version>
         </dependency>
 
         <dependency>
