--- a/springboot-sample/oauth-sample/pom.xml
+++ b/springboot-sample/oauth-sample/pom.xml
@@ -5,18 +5,13 @@
     <parent>
         <artifactId>springboot-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth-sample</artifactId>
     <url>https://www.jitwxs.cn/33ad9e35.html</url>
     <description>Web 三方登录实现（基于OAuth2.0，包含Github和QQ登录）</description>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
