--- a/springboot-sample/pom.xml
+++ b/springboot-sample/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.jitwxs.sample</groupId>
     <artifactId>springboot-sample</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>${reversion}</version>
 
     <modules>
         <module>aop-sample</module>
@@ -27,7 +27,16 @@
         <module>dynamic-schedule-sample</module>
     </modules>
 
+    <contributors>
+        <contributor>
+            <name>jitwxs</name>
+            <url>https://jitwxs.cn</url>
+            <email>jitwxs@foxmail.com</email>
+        </contributor>
+    </contributors>
+
     <properties>
+        <reversion>1.0-SNAPSHOT</reversion>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
@@ -57,5 +66,35 @@
             <version>1.18.18</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.2.5</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
