--- a/springboot-sample/ws-sample/pom.xml
+++ b/springboot-sample/ws-sample/pom.xml
@@ -5,18 +5,13 @@
     <parent>
         <artifactId>springboot-sample</artifactId>
         <groupId>com.github.jitwxs.sample</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${reversion}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ws-sample</artifactId>
     <url>https://www.jitwxs.cn/9af7a6d1.html</url>
     <description>WebSocket 初探并于 SpringBoot 整合</description>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
