--- a/javase-sample/grpc-sample/pom.xml
+++ b/javase-sample/grpc-sample/pom.xml
@@ -13,11 +13,6 @@
     <url>https://www.jitwxs.cn/d6535904.html</url>
     <description>gRPC 在 Java 中的入门实例</description>
 
-    <properties>
-        <protobuf.version>3.11.0</protobuf.version>
-        <grpc.version>1.26.0</grpc.version>
-    </properties>
-
     <dependencies>
         <!-- ProtoBuf Dependency Start -->
         <dependency>
@@ -51,9 +46,16 @@
         <!-- gRPC Dependency End -->
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
         </dependency>
     </dependencies>
 
