--- a/javase-sample/pom.xml
+++ b/javase-sample/pom.xml
@@ -32,10 +32,14 @@
 
         <junit.version>4.13</junit.version>
         <lombok.version>1.18.18</lombok.version>
-        <fastjson.version>1.2.68</fastjson.version>
+        <fastjson.version>1.2.78</fastjson.version>
 
-        <guava.version>29.0-jre</guava.version>
-        <commons-lang3.version>3.10</commons-lang3.version>
+        <guava.version>30.1.1-jre</guava.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+
+        <protobuf.version>3.17.3</protobuf.version>
+        <grpc.version>1.39.0</grpc.version>
     </properties>
 
     <dependencyManagement>
@@ -44,6 +48,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
