--- a/javase-sample/pom.xml
+++ b/javase-sample/pom.xml
@@ -26,6 +26,7 @@
         <module>reflection-sample</module>
         <module>netty-sample</module>
         <module>nio-sample</module>
+        <module>mock-sample</module>
     </modules>
 
     <properties>
@@ -33,6 +34,8 @@
         <maven.compiler.target>8</maven.compiler.target>
 
         <junit.version>4.13</junit.version>
+        <powermock.version>2.0.9</powermock.version>
+
         <lombok.version>1.18.20</lombok.version>
         <fastjson.version>1.2.78</fastjson.version>
 
@@ -79,6 +82,24 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>${powermock.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito2</artifactId>
+                <version>${powermock.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-reflect</artifactId>
+                <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
