--- a/javase-sample/pom.xml
+++ b/javase-sample/pom.xml
@@ -44,9 +44,10 @@
         <guava.version>30.1.1-jre</guava.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-io.version>1.3.2</commons-io.version>
 
-        <protobuf.version>3.19.1</protobuf.version>
-        <grpc.version>1.42.0</grpc.version>
+        <protobuf.version>3.19.3</protobuf.version>
+        <grpc.version>1.43.2</grpc.version>
         <netty.version>4.1.70.Final</netty.version>
     </properties>
 
