--- a/javase-sample/pom.xml
+++ b/javase-sample/pom.xml
@@ -34,7 +34,9 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
 
-        <junit.version>4.13.2</junit.version>
+        <junit4.version>4.13.2</junit4.version>
+        <junit5.version>5.8.2</junit5.version>
+        <mockito.version>4.2.0</mockito.version>
         <powermock.version>2.0.9</powermock.version>
 
         <lombok.version>1.18.22</lombok.version>
@@ -91,23 +93,23 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- junit4 + mockito + powermock -->
+        <!-- junit5 + mockito3 + powermock-reflect -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
